fixed spacing within buttons

--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -98,7 +98,7 @@
 
 	.red-btn {
 		font-size:1.6rem;
-		padding:3% 5%;
+		padding:3% 4%;
 		 margin-right: 4%;
 		}
 	}
